hardware: add ben eater and nand notes

--- a/hardware/8/z80/self.org
+++ b/hardware/8/z80/self.org
@@ -1,3 +1,6 @@
+- Video: Pony80 Construction
+  https://www.youtube.com/playlist?list=PLvxl6-mq-3dUxsxsm6NsTuf2nA3atbSOW
+
 - https://en.wikipedia.org/wiki/Zilog_Z80
   - Z80
   - 1976-2024
